--- a/src/App.css
+++ b/src/App.css
@@ -1116,6 +1116,13 @@ span{
 .pay nav ul li a{
   color: #000316;
 }
+.pay-grid{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
 /* MEDIA */
 
 @media screen and (max-width: 750px) {
