--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -353,6 +353,9 @@ td{
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
 }
 
 .page-info {
@@ -393,13 +396,19 @@ td{
 /* CALENDAR */
 
 .schedule-container {
-  width: 100%;
+  width: 96%;
+  border-radius: 20px;
+  font-family: 'sharp sans';
+  margin: 20px auto;
+  overflow-x: auto;
 }
 
 .custom-event {
   position: relative;
-  padding: 4px;
+  padding: 10px;
   border-left: 5px solid;
+  font-size: 13px;
+  text-wrap: wrap;
 }
 
 .event-popup {
@@ -408,13 +417,14 @@ td{
   left: 100%;
   top: 0;
   background-color: #fff;
-  padding: 5px;
+  padding: 15px 10px;
   border-radius: 4px;
   white-space: nowrap;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   z-index: 10;
   font-size: 12px;
 }
+
 
 .custom-event:hover .event-popup {
   display: block;
@@ -428,8 +438,37 @@ td{
   max-width: 400px;
   margin: 100px auto;
   position: relative;
+  font-family: 'sharp sans';
 }
-
+.modal .button{
+  display: flex;
+  justify-content: space-between;
+}
+.modal.delete{
+  border: 1px solid red;
+  text-align: center;
+  padding: 30px 10px;
+}
+.modal.delete .icons{
+  font-size: 100px;
+  color: red;
+}
+.modal.delete button{
+  background-color: var(--bgg);
+  color: black;
+  border-radius: 5px;
+  border: 2px solid var(--tailored-bg);
+  font-family: 'sharp sans';
+}
+.modal.delete h3{
+  font-size: 16px;
+  color: var(--faint-text);
+}
+.modal.delete p{
+  font-family: 'bold-sharp';
+  font-size: 18px;
+  padding: 10px;
+}
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -461,6 +500,56 @@ td{
   cursor: pointer;
   margin-top: 10px;
 }
+.custom-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.custom-toolbar button {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #4042E2;
+  margin: 0 10px;
+}
+
+.custom-toolbar span {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.view-switcher {
+  display: flex;
+  align-items: center;
+  
+}
+
+.view-switcher button {
+  background: none;
+  border: 1px solid #ECEEEE;
+  font-size: 1rem;
+  cursor: pointer;
+  
+}
+
+.view-switcher .active {
+  color: #4042E2;
+  font-weight: bold;
+}
+.react-big-calendar {
+  width: 100%;
+  overflow-x: auto;
+}
+.react-select-container {
+  width: 200px; 
+}
+
+
+
+
 
 
 
@@ -493,6 +582,14 @@ td{
   .log .close{
     display: block;
     font-size: 26px;
+  }
+  .react-big-calendar {
+    overflow-x: auto;
+  }
+  
+  .schedule-container {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch; /* Enables smooth scrolling on iOS */
   }
 }
 
