--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -548,6 +548,101 @@ td{
 }
 
 
+.search{
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  margin: auto;
+}
+.search input{
+  border: none;
+  outline: none;
+  width: 300px;
+  height: 30px;
+}
+.myprofile-background{
+  width: 95%;
+  margin: auto;
+}
+.myprofile-background .image-bg{
+  background-image: url('./Images/profile.png');
+  background-position: center;
+  background-size: contain;
+  height: 30vh;
+}
+.grid-bg{
+  background-color: #fff;
+  /* height: 100vh; */
+}
+.component{
+  display: grid;
+  grid-template-columns: 20rem auto;
+  gap: 50px;
+  position: relative;
+  top:-80px;
+  width: 90%;
+  margin: auto ;
+}
+.profile-side-bar,
+.personal-info{
+  background-color: #F5F6FB;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+/* PROFILE PICTURE CSS */
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.profile-picture {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+
+.profile-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.icon {
+  position: absolute;
+  right: 5px; 
+  bottom: 10px; 
+  background-color: #025cb2;
+  padding: 5px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+
+}
+
+.icon:hover {
+  opacity: 0.6;
+}
+.user-applications{
+  text-align: center;
+}
+.each{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  border-bottom: 2px solid #ECEEEE;
+}
+.each h4{
+   font-size: 15px;
+   color: #505959;
+}
+.first-div{
+  padding: 20px 0;
+  border-bottom: 2px solid #ECEEEE;
+}
 
 
 
